菜单权限设计明确基础架构